# interconnection

./: .gitignore  MODULE.bazel  README.en.md  README.md  WORKSPACE  build_wheel_entrypoint.sh  requirements.txt  setup.py
.circleci/: config.yml  release-config.yml
.github/workflows/: cla.yml  docs-publish.yml  trigger-circleci.yml
PPCA/: README.md
bazel/: repositories.bzl
docs/: CONTRIBUTING.md  build_mdx.sh  conf.py  index.rst  requirements.txt
docs/ppca/: index.rst
docs/protocols/: ecdh-psi.rst  index.rst  sgb.rst  ss-lr.rst  transport.rst
interconnection/: BUILD.bazel  version.py
interconnection/algos/: psi.proto
interconnection/common/: BUILD.bazel  header.proto
interconnection/handshake/: BUILD.bazel  entry.proto
interconnection/handshake/algos/: BUILD.bazel  lr.proto  optimizer.proto  psi.proto
interconnection/handshake/op/: BUILD.bazel  sigmoid.proto
interconnection/handshake/protocol_family/: BUILD.bazel  ecc.proto  phe.proto  ss.proto
interconnection/legacy/algos/: BUILD.bazel  psi.proto
interconnection/link/: BUILD.bazel  transport.proto
interconnection/runtime/: BUILD.bazel  ecdh_psi.proto  phe.proto
interconnection/v2(draft)/handshake/: BUILD.bazel  entry.proto
interconnection/v2(draft)/handshake/algos/: BUILD.bazel  lr.proto  psi.proto
interconnection/v2(draft)/handshake/op/: BUILD.bazel  sigmoid.proto
interconnection/v2(draft)/handshake/protocol_family/: BUILD.bazel  ecc.proto  ss.proto
interconnection/v2(draft)/runtime/: BUILD.bazel  ndarray.proto
interconnection/v2(draft)/service/: beaver.proto
interconnection/v2(rfc)/handshake/: BUILD.bazel  entry.proto
interconnection/v2(rfc)/handshake/algos/: BUILD.bazel  lr.proto
interconnection/v2(rfc)/handshake/protocol_family/: ecc.proto  ss.proto
interconnection/v2(rfc)/runtime/: ndarray.proto  prg.proto
