# Copyright 2023 Ant Group Co., Ltd.
#
# Licensed under the Apache License, Version 2.0 (the "License");
# you may not use this file except in compliance with the License.
# You may obtain a copy of the License at
#
#   http://www.apache.org/licenses/LICENSE-2.0
#
# Unless required by applicable law or agreed to in writing, software
# distributed under the License is distributed on an "AS IS" BASIS,
# WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
# See the License for the specific language governing permissions and
# limitations under the License.

load("@rules_proto//proto:defs.bzl", "proto_library")
load("@rules_python//python:defs.bzl", "py_library")
load("@rules_python//python:proto.bzl", "py_proto_library")

package(default_visibility = ["//visibility:public"])

proto_library(
    name = "handshake",
    deps = [
        ":entry",
        "//interconnection/handshake/algos",
        "//interconnection/handshake/op",
        "//interconnection/handshake/protocol_family",
    ],
)

py_library(
    name = "handshake_py_proto",
    deps = [
        ":entry_py_proto",
        "//interconnection/common:common_py_proto",  # to create init file in common directory
        "//interconnection/handshake/algos:algos_py_proto",
        "//interconnection/handshake/op:op_py_proto",
        "//interconnection/handshake/protocol_family:protocol_family_py_proto",
    ],
    data = [":create_init_file"],
)

proto_library(
    name = "entry",
    srcs = ["entry.proto"],
    deps = [
        "//interconnection/common",
        "@com_google_protobuf//:any_proto",
    ],
)

py_proto_library(
    name = "entry_py_proto",
    deps = [":entry"],
)

genrule(
    name = "create_init_file",
    outs = ["__init__.py"],
    cmd = "touch $@",
)
