# Copyright 2023 Ant Group Co., Ltd.
#
# Licensed under the Apache License, Version 2.0 (the "License");
# you may not use this file except in compliance with the License.
# You may obtain a copy of the License at
#
#   http://www.apache.org/licenses/LICENSE-2.0
#
# Unless required by applicable law or agreed to in writing, software
# distributed under the License is distributed on an "AS IS" BASIS,
# WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
# See the License for the specific language governing permissions and
# limitations under the License.

load("@rules_proto//proto:defs.bzl", "proto_library")
load("@rules_python//python:defs.bzl", "py_library")
load("@rules_python//python:proto.bzl", "py_proto_library")

package(default_visibility = ["//visibility:public"])

proto_library(
    name = "algos",
    deps = [
        ":lr",
        ":psi",
    ],
)

py_library(
    name = "algos_py_proto",
    deps = [
        ":lr_py_proto",
        ":psi_py_proto",
        ":sgb_py_proto",
    ],
    data = [":create_init_file"],
)

proto_library(
    name = "lr",
    srcs = ["lr.proto"],
    deps = [
        ":optimizer",
        "@com_google_protobuf//:any_proto",
    ],
)

proto_library(
    name = "optimizer",
    srcs = ["optimizer.proto"],
)

py_proto_library(
    name = "lr_py_proto",
    deps = [":lr"],
)

proto_library(
    name = "psi",
    srcs = ["psi.proto"],
)

py_proto_library(
    name = "psi_py_proto",
    deps = [":psi"],
)

proto_library(
    name = "sgb",
    srcs = ["sgb.proto"],
)

py_proto_library(
    name = "sgb_py_proto",
    deps = [":sgb"],
)

genrule(
    name = "create_init_file",
    outs = ["__init__.py"],
    cmd = "touch $@",
)
